# volautomatiq

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MCP_SETUP.md  README.md  docker-compose.yml  main.py  mcp-config.json  pyproject.toml
volautomatiq/: __init__.py  api_server.py  cli.py  mcp_server.py  parser.py  reporter.py  scanner.py
volautomatiq/templates/: report.html
