[project]
name = "volautomatiq"
version = "0.1.0"
description = "Automated Volatility memory forensics scanner with HTML reporting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.2",
]

[project.scripts]
volautomatiq = "volautomatiq.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
